[package]

name        = "nix"
description = "Rust friendly bindings to *nix APIs"
version     = "0.5.0-pre"
authors     = ["Carl Lerche <me@carllerche.com>"]
homepage    = "https://github.com/carllerche/nix-rust"
license     = "MIT"
build       = "build.rs"
exclude     = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*"
]

[features]
eventfd = []
execvpe = []
nixstring = []
preadv_pwritev = []
signalfd = []

[dependencies]
libc = "^0.2.5"
bitflags = "^0.4.0"

[build-dependencies]
rustc_version = "^0.1.6"

[dev-dependencies]
rand = "^0.3.13"
tempdir = "^0.3.4"

[dev-dependencies.nix-test]
path    = "nix-test"
version = "*"

[[test]]
name = "test"
path = "test/test.rs"

[[test]]
name = "test-signalfd"
path = "test/test_signalfd.rs"
harness = false
test = true
